<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="main_activity_description">Find a nice restaurant and invite your co-workers for lunch!</string>

    <!--SIGN-IN LAYOUT-->
    <string name="signin_title">Go4Lunch</string>
    <string name="signin_subtitle">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="signin_button_email">Email Sign-in</string>
    <string name="signin_button_facebook">Facebook Sign-in</string>
    <string name="signin_button_google">Google Sign-in</string>
    <string name="signin_button_twitter">Twitter Sign-in</string>
    <string name="signin_background_image">lunch around the table 3peoples</string>
    <string name="signin_logo">Go4Lunch logo</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_authentication_canceled">Authentication canceled !</string>
    <string name="error_no_internet">No internet !</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="connection_succeed">Authentication succeed !</string>


    <string name="facebook_application_id" translatable="false">3127317524251439</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3127317524251439</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="bottom_menu_item1">MapView</string>
    <string name="bottom_menu_item2">ListView</string>
    <string name="bottom_menu_item3">Workmates</string>
    <string name="home_title">I\'m Hungry!</string>

    <!-- HOME ACTIVITY  -   NAVIGATION DRAWER MENU -->
    <string name="navigation_drawer_item1">YOUR LUNCH</string>
    <string name="navigation_drawer_item2">SETTINGS</string>
    <string name="navigation_drawer_item3">LOGOUT</string>
    <string name="nav_header_background_description">lunch table with 5 people</string>
    <string name="nav_header_avatar_description">pitcure of avatar</string>
    <string name="nav_header_profile_name">Surname NAME</string>
    <string name="nav_header_profile_email">account@email.com</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- HOME ACTIVITY  -   NAVIGATION DRAWER MENU  -   SETTINGS ALERT DIALOG -->
    <string name="alert_dialog_settings_title">Settings…</string>
    <string name="alert_dialog_settings_cancel_button_label">Cancel</string>
    <string name="alert_dialog_settings_save_button_label">Save</string>

    <!-- HOME ACTIVITY - SEARCH VIEW -->
    <string name="search_item">Search</string>

    <!-- COMMON STRINGS -->
    <!-- HOME ACTIVITY  -   LIST VIEW FRAGMENT/LIST VIEW ADAPTER
    - DETAILS ACTIVITY  -->
    <string name="place_attribute_opennow_true">Open</string>
    <string name="place_attribute_opennow_false">Closed</string>
    <string name="go4Lunch_interested_workmates" translatable="false">0</string>
    <string name="place_attribute_name">Name</string>
    <string name="place_attribute_address">Address</string>
    <string name="place_attribute_open_hours">Open hours</string>
    <string name="place_attribute_distance" translatable="false">Distance(m)</string>

    <!-- DETAILS ACTIVITY  -->
    <string name="restaurant_screenshot">Restaurant screenshot</string>
    <string name="call_label">CALL</string>
    <string name="like_label">LIKE</string>
    <string name="website_label">WEBSITE</string>
    <string name="guest_registered">is joining!</string>
    <string name="no_guest">Nobody has booked.</string>
    <string name="the_workmate_empty_avatar">The workmate empty avatar</string>

    <!-- WORKMATES FRAGMENT  -->
    <string name="workmate_choice">Workmate choice</string>
    <string name="workmates_choice_todo">hasn\'t decided yet</string>
    <string name="workmate_choice_done">is eating at</string>
    <string name="nav_drawer_item1_noresult">No lunch selected</string>

    <!-- NOTIFICATION  -->
    <string name="notification_title" translatable="false">Go4Lunch</string>
    <string name="notification_default_text">No data to display</string>
    <string name="notification_enabled_without_placeId_stored">Select a place to lunch first</string>
    <string name="register_button">Register button</string>
    <string name="call_button">Call button</string>
    <string name="like_button">Like button</string>
    <string name="website_button">Website button</string>
    <string name="go4lunch_logo" translatable="false">Go4Lunch logo</string>

</resources>