<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_lunch"
            android:icon="@drawable/ic_baseline_local_dining_white"
            android:title="@string/navigation_drawer_item1" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_white"
            android:title="@string/navigation_drawer_item2" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_white"
            android:title="@string/navigation_drawer_item3" />
    </group>
</menu>