<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/signin_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/signin_background_image"
        android:scaleY="1.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lunch_around_the_table_3_peoples" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/go4lunch_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/signin_logo"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:translationY="32dp"
            app:srcCompat="@drawable/ic_splashscreen_logo_white" />

        <TextView
            android:id="@+id/signin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/signin_title"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signin_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/signin_subtitle"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/signin_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/signin_button_facebook"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/signin_facebook"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/signin_button_facebook"
            android:textAlignment="center"
            android:textColor="#FFE0B2"
            android:textSize="16sp"
            app:icon="@drawable/com_facebook_button_icon" />

        <Button
            android:id="@+id/signin_button_google"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/signin_google"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/signin_button_google"
            android:textAlignment="center"
            android:textColor="#FFF9C4"
            android:textSize="16sp"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconTintMode="multiply" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>