<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
        android:id="@+id/nav_header_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_background_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lunch_around_the_table" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/nav_header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nav_header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/nav_header_profile_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/nav_header_avatar_description"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="8dp">

                <TextView
                    android:id="@+id/nav_header_profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_profile_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nav_header_profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nav_header_profile_email" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>