<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/place_attributes_part1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/place_attributes_part2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/place_attribute_name" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:textSize="12sp"
            android:lines="1"
            android:text="@string/place_attribute_address" />

        <TextView
            android:id="@+id/open_hours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:textSize="12sp"
            android:lines="1"
            android:text="@string/place_attribute_open_hours" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/place_attributes_part2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@id/place_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/place_attribute_distance" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/workmate_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_person_outline" />

            <TextView
                android:id="@+id/interested_workmates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/go4Lunch_interested_workmates" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:progressTint="@color/quantum_lime"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/place_photo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

</RelativeLayout>