<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.place_details.PlaceDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_background"
        >
        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/LinearLayout"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            app:elevation="9dp"
            app:layout_constraintBottom_toTopOf="@id/LinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture"
            app:maxImageSize="32dp"
            app:srcCompat="@drawable/ic_baseline_check_circle_outline" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/picture">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/place_attribute_name" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:progressTint="@color/quantum_lime"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingBottom="32dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:background="@color/orange_background"
        android:text="@string/place_attribute_address" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!--TODO: Refactorer FROM ImageButton+TextView TO TextView avec attribut drawableTop-->
            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_baseline_phone"
                app:tint="@color/orange_text" />

            <TextView
                android:id="@+id/call_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/call_label"
                android:textColor="@color/orange_text"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_baseline_star_outline"
                app:tint="@color/orange_text" />

            <TextView
                android:id="@+id/like_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/orange_text"
                android:text="@string/like_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/website_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_baseline_public"
                app:tint="@color/orange_text" />

            <TextView
                android:id="@+id/website_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/orange_text"
                android:text="@string/website_label" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_guests"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.place_details.PlaceDetailsActivity"
        tools:itemCount="5"
        tools:listitem="@layout/guest_attributes" />


</LinearLayout>